<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.mheev.helpthemshop.viewmodel.ItemDetailsViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="RtlHardcoded">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                >

                <ImageView
                    android:id="@+id/imageview_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/quila2"
                    android:tint="#11000000"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.9"
                    android:onClick="@{(view) -> viewModel.onClickImage(view)}"
                    android:contentDescription="@string/item_avatar"
                    />

                <FrameLayout
                    android:id="@+id/framelayout_title"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.3">

                    <LinearLayout
                        android:id="@+id/linearlayout_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--android:gravity="bottom|center"-->
                        <!--android:text="Title"-->
                        <!--android:textColor="@android:color/white"-->
                        <!--android:textSize="30sp" />-->
                        <EditText
                            android:id="@+id/item_name_edit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="bottom|center"
                            android:hint="@string/hint_title"
                            android:minWidth="100dp"
                            android:maxLines="1"
                            android:text="@={viewModel.itemName}"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/item_title_size" />

                    </LinearLayout>
                </FrameLayout>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_anchor="@id/framelayout_title"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:onMenuItemClick="@{(menu)->viewModel.onMenuItemClick(menu)}"
            app:title="">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="@dimen/image_final_width"
                    android:layout_height="@dimen/image_final_width" />

                <TextView
                    android:id="@+id/textview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:text="@{viewModel.itemName}"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_width"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/quila"
            android:transitionName="@string/transition_avatar"
            app:border_color="@android:color/white"
            app:border_width="2dp"
            app:finalHeight="@dimen/image_final_width"
            app:finalYPosition="2dp"
            app:layout_behavior="com.mheev.helpthemshop.behavior.AvatarImageBehavior"
            app:startHeight="2dp"
            app:startToolbarPosition="2dp"
            app:startXPosition="2dp"
            android:onClick="@{(view) -> viewModel.onClickImage(view)}"
            android:contentDescription="@string/item_avatar"
            app:imgUrl="@{viewModel.avatarUrl}"
            app:callback="@{viewModel.imageLoaderCallback}"
            />

        <!--<ImageView-->
            <!--android:id="@+id/avatar"-->
            <!--android:layout_height="@dimen/image_width"-->
            <!--android:layout_width="@dimen/image_width"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:background="@drawable/circle"-->
            <!--android:transitionName="@string/transition_avatar"-->
            <!--android:onClick="@{(view) -> viewModel.onClickImage(view)}"-->
            <!--app:imgUrl="@{viewModel.avatarUrl}"-->
            <!--app:callback="@{viewModel.imageLoaderCallback}"-->
            <!--/>-->


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:behavior_overlapTop="30dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="8dp"
                app:contentPadding="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <!--Group-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/group_element"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/different_content_padding">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/item_note_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/ItemDetailsHeaderHintAppearance">

                            <EditText
                                android:id="@+id/group"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_group"
                                android:minWidth="@dimen/edittext_min_width"
                                android:maxLines="1"
                                android:textAppearance="@style/ItemDetailsValueApperance"
                                android:text="@{viewModel.group}"
                                />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <!--Quantity-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/quantity_element"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/different_content_padding">

                        <TextView
                            android:id="@+id/item_hint_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_quantity"
                            android:textAppearance="@style/ItemDetailsHintApperance" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/same_content_padding"
                            android:contentDescription="@string/quantity_value"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/item_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minWidth="@dimen/text_clickable_width"
                                android:onClick="@{()->viewModel.onQuantityValueClick()}"
                                android:text="@{String.valueOf(viewModel.amount)}"
                                android:textAppearance="@style/ItemDetailsValueApperance"
                                android:textSize="@dimen/item_details_value" />

                            <TextView
                                android:id="@+id/item_unit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minWidth="@dimen/text_clickable_width"
                                android:onClick="@{()->viewModel.onQuantityUnitClick()}"
                                android:paddingLeft="@dimen/text_space"
                                android:paddingRight="@dimen/text_space"
                                android:text="@{String.valueOf(viewModel.unit)}"
                                android:textAppearance="@style/ItemDetailsValueApperance"
                                android:textSize="@dimen/item_details_value" />
                        </LinearLayout>
                    </LinearLayout>

                    <!--Price-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/price_element"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/different_content_padding">

                        <TextView
                            android:id="@+id/item_hint_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_price"
                            android:textAppearance="@style/ItemDetailsHintApperance" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/same_content_padding"
                            android:contentDescription="@string/price_value"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/item_price_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="@{()->viewModel.onPriceValueClick()}"
                                android:text="@{String.valueOf(viewModel.priceValue)}"
                                android:textAppearance="@style/ItemDetailsValueApperance"
                                android:textSize="@dimen/item_details_value" />

                            <TextView
                                android:id="@+id/item_price_currency"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/same_content_padding"
                                android:minWidth="@dimen/text_clickable_width"
                                android:onClick="@{()->viewModel.onPriceCurrencyClick()}"
                                android:text="@{viewModel.priceCurrency}"
                                android:textAppearance="@style/ItemDetailsValueApperance"
                                android:textSize="@dimen/item_details_value" />

                            <TextView
                                android:id="@+id/item_price_summary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/same_content_padding"
                                android:text="@{viewModel.priceTotal}"
                                android:textAppearance="@style/ItemDetailsValueApperance"
                                android:textSize="@dimen/item_details_value" />
                        </LinearLayout>


                    </LinearLayout>

                    <!--Note-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/note_element"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/different_content_padding">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorPrimaryDark"
                            app:hintTextAppearance="@style/ItemDetailsHeaderHintAppearance">

                            <EditText
                                android:id="@+id/item_note"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_note"
                                android:minWidth="@dimen/edittext_min_width"
                                android:maxLines="1"
                                android:textAppearance="@style/ItemDetailsValueApperance"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                </LinearLayout>


            </android.support.v7.widget.CardView>


        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</layout>