<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mheev.helpthemshop.viewmodel.ItemDetailsViewModel" />

        <import type="com.mheev.helpthemshop.binding_adapter.ColorEnum" />
    </data>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#126679"
            android:paddingBottom="@dimen/content_border_padding"
            android:paddingLeft="@dimen/content_border_padding"
            android:paddingRight="@dimen/content_border_padding"
            android:paddingTop="@dimen/content_border_padding">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/item_name_edit_text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:textCursorDrawable="@null"
                android:theme="@style/EditTextHeaderTheme"
                app:hintTextAppearance="@style/ItemDetailsHeaderHintAppearance"

                >

                <EditText
                    android:id="@+id/item_name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title"
                    android:minWidth="100dp"
                    android:singleLine="true"
                    android:text="@{viewModel.itemName}"
                    android:textColor="@color/colorWhite"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/item_title_size"

                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name_edit_text_layout"
                android:paddingTop="10dp"
                android:theme="@style/EditTextHeaderTheme"
                app:hintTextAppearance="@style/ItemDetailsHeaderHintAppearance">

                <EditText
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_group"
                android:minWidth="100dp"
                android:singleLine="true"
                android:text="@{viewModel.group}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/item_subtitle_size" />

            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <View
            android:id="@+id/circle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/header"
            android:layout_gravity="right"
            android:layout_marginRight="100px"
            android:layout_marginTop="-70px"
            android:background="@drawable/circle"
            android:transitionName="@string/transition_avatar" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:contentDescription="Quantity Element"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/content_border_padding">

                    <TextView
                        android:id="@+id/item_hint_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_quantity"
                        android:textAppearance="@style/ItemDetailsHintApperance" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/same_content_padding"
                        android:contentDescription="Quantity Value"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/item_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/text_clickable_width"
                            android:onClick="@{()->viewModel.onQuantityValueClick()}"
                            android:text="@{String.valueOf(viewModel.amount)}"
                            android:textAppearance="@style/ItemDetailsValueApperance"
                            android:textSize="@dimen/item_details_value" />

                        <TextView
                            android:id="@+id/item_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="@dimen/text_clickable_width"
                            android:onClick="@{()->viewModel.onQuantityUnitClick()}"
                            android:paddingLeft="@dimen/text_space"
                            android:text="@{String.valueOf(viewModel.unit)}"
                            android:textAppearance="@style/ItemDetailsValueApperance"
                            android:textSize="@dimen/item_details_value" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:contentDescription="Price Element"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/content_border_padding"
                    android:paddingTop="@dimen/different_content_padding">

                    <TextView
                        android:id="@+id/item_hint_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_price"
                        android:textAppearance="@style/ItemDetailsHintApperance" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/same_content_padding"
                        android:contentDescription="Price Value"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/item_price_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{()->viewModel.onPriceValueClick()}"
                            android:text="@{String.valueOf(viewModel.priceValue)}"
                            android:textAppearance="@style/ItemDetailsValueApperance"
                            android:textSize="@dimen/item_details_value" />

                        <TextView
                            android:id="@+id/item_price_currency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/same_content_padding"
                            android:minWidth="@dimen/text_clickable_width"
                            android:onClick="@{()->viewModel.onPriceCurrencyClick()}"
                            android:text="@{viewModel.priceCurrency}"
                            android:textAppearance="@style/ItemDetailsValueApperance"
                            android:textSize="@dimen/item_details_value" />

                        <TextView
                            android:id="@+id/item_price_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/same_content_padding"
                            android:text="@{viewModel.priceTotal}"
                            android:textAppearance="@style/ItemDetailsValueApperance"
                            android:textSize="@dimen/item_details_value" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:contentDescription="Note Element"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/content_border_padding"
                    android:paddingTop="@dimen/different_content_padding">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/item_note_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:theme="@style/EditTextContentTheme"
                        app:hintTextAppearance="@style/ItemDetailsHintApperance">

                        <EditText
                            android:id="@+id/item_note"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_note"
                            android:minWidth="@dimen/edittext_min_width"
                            android:singleLine="true"
                            android:textAppearance="@style/ItemDetailsValueApperance"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/item_details_value" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <!--todo: include for reuse item deatalis UI-->

    </LinearLayout>
</layout>
